--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -16,5 +16,21 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
+# Key bindings 
+unbind C-b
+set -g prefix C-a
+bind-key C-a send-prefix
+
+bind v split-window -h
+bind h split-window -v
+
+bind -n C-h select-pane -L
+bind -n C-j select-pane -D
+bind -n C-k select-pane -U
+bind -n C-l select-pane -R
+
+# Enable mouse mode
+set -g mouse on
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
