--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -28,6 +28,8 @@ bind -n C-h select-pane -L
 bind -n C-j select-pane -D
 bind -n C-k select-pane -U
 bind -n C-l select-pane -R
+bind -n M-l next-window
+bind -n M-h previous-window
 
 # Enable mouse mode
 set -g mouse on
