--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -24,10 +24,11 @@ bind-key C-a send-prefix
 bind v split-window -h
 bind h split-window -v
 
-bind -n C-h select-pane -L
-bind -n C-j select-pane -D
-bind -n C-k select-pane -U
-bind -n C-l select-pane -R
+bind -n C-S-h select-pane -L
+bind -n C-S-j select-pane -D
+bind -n C-S-k select-pane -U
+bind -n C-S-l select-pane -R
+
 bind -n M-l next-window
 bind -n M-h previous-window
 
